Fixed issue with width on mobile. Added hard-coded images to Higher Education page.

--- a/categories/static/categories/style.css
+++ b/categories/static/categories/style.css
@@ -9,10 +9,12 @@ section {
 
 /* set these to twice the section padding% */
 #indicators .indicator:nth-child(even) {
-	margin-left: -20%;
-	margin-right: -20%;
+	position: relative;
+	left: -20%;
+	margin-right: 0em;
+	width: 100%;
 	padding-left: 20%;
-	padding-right: 20%;
+	padding-right: 10vw;
 }
 
 #site_title, #site_nav, h1, h2, h3, .popstat {
@@ -372,7 +374,25 @@ BODY.home #popstats .popstat:hover .hovercontent .button:hover {
 	width: 100%;
 }
 
-@media only screen and (max-width: 800px) {
+#opcsteps {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+
+	background-color: #765285;
+}
+
+#opcsteps img {
+	flex-basis: 1;
+	width: 15vw;
+	height: 15vw;
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 820px)
+  and (-webkit-min-device-pixel-ratio: 2) {
 	.full_size_dashboard_link {
 		display: block;
 	}
